--- a/entry.html
+++ b/entry.html
@@ -35,8 +35,7 @@
             </div>
             <div class="my-2 h-px bg-slate-100"></div>
             <!-- links -->
-            <a href="/index.html" role="menuitem" class="flex items-center gap-2 px-2 py-2 rounded-md hover:bg-slate-50">
-              <!-- lookup icon -->
+            <a href="/user.html" role="menuitem" class="flex items-center gap-2 px-2 py-2 rounded-md hover:bg-slate-50">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-slate-500" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M12.9 14.32A6 6 0 1114.32 12.9l3.39 3.39a1 1 0 01-1.42 1.42l-3.39-3.39zM8.5 13a4.5 4.5 0 100-9 4.5 4.5 0 000 9z" clip-rule="evenodd" />
               </svg>
@@ -57,12 +56,12 @@
               Go to Data Entry
             </a>
             <div class="my-2 h-px bg-slate-100"></div>
-            <button role="menuitem" class="w-full text-left flex items-center gap-2 px-2 py-2 rounded-md hover:bg-red-50 text-red-600">
+            <a href="/index.html" role="menuitem" class="flex items-center gap-2 px-2 py-2 rounded-md hover:bg-slate-50 text-red-600 hover:text-red-700">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M3.5 10a.75.75 0 01.75-.75h7.69L9.22 6.53a.75.75 0 111.06-1.06l4.24 4.25a.75.75 0 010 1.06l-4.24 4.25a.75.75 0 11-1.06-1.06l2.72-2.72H4.25A.75.75 0 013.5 10z" clip-rule="evenodd" />
               </svg>
-              Log out
-            </button>
+              Sign out to Login
+            </a>
           </div>
         </div>
       </div>
