--- a/entry.html
+++ b/entry.html
@@ -69,8 +69,13 @@
           </label>
 
           <label class="grid gap-1 text-sm">
-            <span class="font-medium text-slate-800">Lawyer Case Number</span>
-            <input type="text" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="LCN-00123" />
+            <span class="font-medium text-slate-800">Case Name</span>
+            <input type="text" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="Accident on 5th Ave" />
+          </label>
+
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-slate-800">Engineer</span>
+            <input type="text" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="Engineer Name" />
           </label>
 
           <label class="grid gap-1 text-sm">
@@ -107,7 +112,7 @@
 
           <label class="grid gap-1 text-sm">
             <span class="font-medium text-slate-800">Insurance Company Claim Number</span>
-            <input type="text" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="CLM-123456" />
+            <input type="text" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus-border-teal-600 placeholder:text-slate-400" placeholder="CLM-123456" />
           </label>
         </form>
       </section>
